--- a/assets/css/bootsnav.css
+++ b/assets/css/bootsnav.css
@@ -45,7 +45,7 @@ nav.navbar.bootsnav{
     -webkit-border-radius: 0px;
     -o-border-radius: 0px;
     border-radius: 0px;
-    background-color: #fff;
+    background-color: rgba(0, 0, 0, 0.34);
     border: none;
     border-bottom: solid 1px #e0e0e0;
     z-index: 9;
