--- a/assets/css/bootsnav.css
+++ b/assets/css/bootsnav.css
@@ -45,14 +45,14 @@ nav.navbar.bootsnav{
     -webkit-border-radius: 0px;
     -o-border-radius: 0px;
     border-radius: 0px;
-    background-color: rgba(0, 0, 0, 0.34);
+    background-color: rgba(0, 0, 0, 0.5);
     border: none;
     border-bottom: solid 1px #e0e0e0;
     z-index: 9;
 }
 
 nav.navbar.bootsnav ul.nav > li > a{
-    color: #6f6f6f;
+    color: #ccc;
     background-color: transparent !important;
 }
 
