--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -911,7 +911,7 @@ Nav Menu style
     position: relative;
 }
 .home{
-    background: url(../images/background/light.mp4) no-repeat bottom center;
+    background: url(../images/background/home-bg.jpg) no-repeat bottom center;
 }
 .service-banner{
     background: url(../images/background/services-bg.jpg) no-repeat bottom center;
